Reduced font size for Router list and Peer list - Map views Fixed spacing on peer and router list table view headers.

--- a/app/views/components/map/map.scss
+++ b/app/views/components/map/map.scss
@@ -277,6 +277,7 @@
                 margin: 0;
                 list-style-type: none;
                 cursor: pointer;
+                font-size: 12px;
                 background-color: white;
                 color: #5c6e7c;
                 li{
